Second Update after the testing with streamlit UI with the layered flow.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ venv/
 ENV/
 env/
 ML_plag_env/
+ml_plagarism/
 # ==================================================
 # Jupyter Notebook artifacts
 # ==================================================
